Small server implementation is added to solve cors problem. Also related functions are implemented

--- a/src/index.html
+++ b/src/index.html
@@ -54,11 +54,11 @@
                   <div id="keywords-container" class="keywords-container padding-10">
                   </div>
                 </div>
-                <div class="top-products-container padding-10">
+                <div id="top-products-container" class="top-products-container padding-10">
                   <div class="black-bold">Top Results for 
                     <span id="search-input-result"></span>
                   </div>
-                  <div class="images-container">
+                  <div id="images-container" class="images-container">
                       <div class="top-product-container">
                         <img class="image-size" src="undefined"/>
                         <p> title</p>
@@ -149,26 +149,6 @@
           </div>
       </section>
     </div>
-    
-
-    <!-- 
-    font-awesome
-
-    user
-    shopping-cart
-
-    bars
-
-    lightbulb
-
-    tag
-
-// wrench screwdriver
-    <div>Icons made by <a href="https://www.flaticon.com/authors/elegant-themes" title="Elegant Themes">Elegant Themes</a> from <a href="https://www.flaticon.com/" 			    title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" 			    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
-
-    //double seat
-
-    <div>Icons made by <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" 			    title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" 			    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div> -->
 
   </body>
 </html>
